style: code cleanup and SonarQube fixes